<resources>
    <string name="app_name">AllTech</string>
    <string name="btn_registro">Registrarse</string>
    <string name="btn_login">Iniciar sesion</string>
    <string name="btn_exit">Salir</string>
    <string name="lbl_bienvenido">¡Bienvenido a AllTech!</string>
    <string name="lbl_registro">Registro</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_apellidos">Apellidos</string>
    <string name="txt_email">Email</string>
    <string name="txt_direccion">Direccion</string>
    <string name="txt_usuario">Usuario</string>
    <string name="txt_password">Contraseña</string>
    <string name="txt_telefono">Telefono</string>
    <string name="btn_confirmar">Confirmar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Contraseña</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>
    <string name="lbl_descripion">Descripcion</string>
    <string name="lbl_nombre_prod">Nombre</string>
    <string name="lbl_precio">Precio</string>
    <string name="lbl_detalle">Detalle</string>
    <string name="btn_sign_in">Iniciar sesion</string>
    <string name="title_prefer_credenciales" translatable="false">credenciales</string>
    <string name="key_email_pref" translatable="false">email</string>
    <string name="key_pass_pref" translatable="false">pass</string>
    <string name="title_email_pref" translatable="false">Email</string>
    <string name="title_pass_pref">Contraseña</string>
    <string name="key_mute" translatable="false">mute</string>
    <string name="title_mute_pref">Efectos de sonido</string>
    <string name="value_pass_pref">ejemplo</string>
    <string name="value_email_pref">ejemplo@email.com</string>
    <string name="mn_ajuste">Ajustes</string>
    <string name="mn_preferencias">Preferencias</string>
    <string name="mn_logOut">Cerrar sesion</string>
    <string name="btn_borar_cuenta">Borrar cuenta</string>
    <string name="title_volumen">Volumen</string>
</resources>