<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Prod_detalle_activity">

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sep_lateral"
        android:layout_marginLeft="@dimen/sep_lateral"
        android:layout_marginBottom="@dimen/sep_horizontal"
        android:text="Añadir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/sep_lateral"
        android:layout_marginRight="@dimen/sep_lateral"
        android:layout_marginBottom="@dimen/sep_horizontal"
        android:text="Volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/lblDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_detalle" />

        <EditText
            android:id="@+id/txtNombreDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/lbl_nombre_prod"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtPrecioDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/lbl_precio"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtDescripcionDetalle"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:ems="10"
            android:hint="@string/lbl_descripion"
            android:inputType="textPersonName" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>